--- a/HTMLCSS/responsive.html
+++ b/HTMLCSS/responsive.html
@@ -6,20 +6,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
-<body>
+<body onload="myFunction()">
   <div class="section">
     <h2 class="heading">This is my heading</h2>
+    <h2 class="heading">This is my heading</h2>
     <p class="para">
-      Hi, this is my paragraph Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus lacinia orci sit amet
-      imperdiet. Suspendisse ullamcorper hendrerit turpis non ullamcorper. In mollis, turpis lobortis luctus molestie,
-      felis velit condimentum leo, eget posuere urna odio sed nulla. Nunc vestibulum, velit a tempus tincidunt, turpis
-      sapien varius urna, blandit pellentesque sem libero sit amet ipsum. Cras viverra sit amet ligula feugiat pulvinar.
-      Quisque pretium felis id justo viverra ornare. Duis ut massa nisl. Morbi purus ligula, placerat a sollicitudin
-      nec, ultrices a odio. Pellentesque id libero erat. Aliquam erat volutpat. Nunc elementum neque non diam egestas
-      vehicula. Cras ac ipsum eget ex scelerisque mattis. Nulla sit amet cursus elit. Integer scelerisque lorem nec mi
-      aliquet, vitae tincidunt velit egestas.
+      Hi, this is my paragraph Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit. Sed tempus lacinia orci sit amet imperdiet. Suspendisse
+      ullamcorper hendrerit turpis non ullamcorper. In mollis, turpis lobortis
+      luctus molestie, felis velit condimentum leo, eget posuere urna odio sed
+      nulla. Nunc vestibulum, velit a tempus tincidunt, turpis sapien varius
+      urna, blandit pellentesque sem libero sit amet ipsum. Cras viverra sit
+      amet ligula feugiat pulvinar. Quisque pretium felis id justo viverra
+      ornare. Duis ut massa nisl. Morbi purus ligula, placerat a sollicitudin
+      nec, ultrices a odio. Pellentesque id libero erat. Aliquam erat
+      volutpat. Nunc elementum neque non diam egestas vehicula. Cras ac ipsum
+      eget ex scelerisque mattis. Nulla sit amet cursus elit. Integer
+      scelerisque lorem nec mi aliquet, vitae tincidunt velit egestas.
     </p>
+    <input type="text" name="myInput" id="myInput" />
+    <button onclick="onButtonClick()">Submit</button>
+    <p id="myPara">Type Something</p>
   </div>
+  <script>
+    async function myFunction() {
+      var myPromise = new Promise((myResolve, myReject) => {
+        setTimeout(() => {
+          var obj = document.getElementsByClassName("heading");
+          for (let el of obj) {
+            el.style.color = "red";
+          }
+          myResolve(true);
+        }, 3000);
+      });
+      let result = await myPromise;
+      console.log(result);
+      if (result == true) {
+        setTimeout(() => {
+          var obj = document.getElementsByClassName("heading");
+          for (let el of obj) {
+            el.style.color = "black";
+          }
+        }, 4000);
+      }
+    }
+
+    function onButtonClick() {
+      var inputObj = document.getElementById("myInput");
+      console.log(inputObj.value);
+      var paraObj = document.getElementById("myPara");
+      paraObj.innerText = `You typed: ${inputObj.value}`;
+      paraObj.style.color = "blue";
+    }
+  </script>
 </body>
 
 </html>
